# pdf-chatbot-backend

./: .env  mm.py  pyproject.toml  requirements.txt
App/: Chunkss.py  PdfExtraction.py  Rag.py  __init__.py  embeddings.py  gemini.py  newsapi.py  prompts.txt
Prompts/: sample.txt  system_prompt
database/: Vector_store.py  qdtest.py
main/: Main.py  fastapi_web.py
